`feat: Added forgot password and reset password functionality`

--- a/config.env
+++ b/config.env
@@ -5,3 +5,7 @@ USERNAME=Maxwell
 PASSWORD=password
 JWT_SECRET=obisike-maxwell-onyekachukwu-Government200533
 JWT_EXPIRES_IN=90d
+EMAIL_USERNAME=ec275592e2a74e
+EMAIL_PASSWORD=d9aa53348570d6
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
